2506082346项目存档，需要搭配mysql，pc.qq.com仓库,完档

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,3 +4,15 @@ $font-size-base: 16px;
 $line-height-base: 1.6;
 $transition-time: 0.3s;
 $shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+$text-color: #333;
+$background-color: url('@/assets/images/bg2.png'); // 页面背景色
+$upload-button-color: #ff6b6b;
+$upload-button-hover: #ff5252;
+$modal-button-color: #4a90e2;
+$modal-cancel-color: #f1f1f1;
+$photo-caption-bg: rgba(0, 0, 0, 0.7);
+$photo-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+$text-white: white;
+$search-input-bg: #55aceb;
+$search-input-hover: rgba(255, 255, 255, 0.3);
+$button-bg: rgba(255, 255, 255, 0.2);
